--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
       }
     ],
     "camelcase": "error",
-    "comma-dangle": ["error", "never"],
+    "comma-dangle": 0,
     "comma-spacing": [
       "error",
       {
