--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@testing-library/react": "^9.3.2",
     "babel-plugin-macros": "^2.6.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -26,8 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "test": "react-scripts test",
     "lint": "eslint './src/**/*.js'",
     "lint:fix": "eslint './src/**/*.js' --fix"
   },
