--- a/.eslintrc
+++ b/.eslintrc
@@ -7,14 +7,19 @@
     "prettier/react"
   ],
   "parser": "babel-eslint",
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
     }
   },
   "rules": {
-    "array-bracket-spacing": ["error", "never"],
+    "array-bracket-spacing": [
+      "error",
+      "never"
+    ],
     "block-scoped-var": "error",
     "block-spacing": "error",
     "brace-style": [
@@ -33,7 +38,10 @@
         "after": true
       }
     ],
-    "comma-style": ["error", "last"],
+    "comma-style": [
+      "error",
+      "last"
+    ],
     "complexity": [
       "error",
       {
@@ -42,9 +50,18 @@
     ],
     "default-case": "error",
     "dot-notation": "error",
-    "eol-last": ["error", "always"],
-    "eqeqeq": ["error", "always"],
-    "func-call-spacing": ["error", "never"],
+    "eol-last": [
+      "error",
+      "always"
+    ],
+    "eqeqeq": [
+      "error",
+      "always"
+    ],
+    "func-call-spacing": [
+      "error",
+      "never"
+    ],
     "func-name-matching": "error",
     "func-style": [
       "error",
@@ -61,7 +78,10 @@
         "SwitchCase": 1
       }
     ],
-    "jsx-quotes": ["error", "prefer-double"],
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
     "key-spacing": [
       2,
       {
@@ -82,8 +102,14 @@
         "before": true
       }
     ],
-    "linebreak-style": ["error", "unix"],
-    "max-depth": ["error", 3],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "max-depth": [
+      "error",
+      3
+    ],
     "max-len": [
       "error",
       120,
@@ -95,10 +121,19 @@
         "ignoreRegExpLiterals": true
       }
     ],
-    "max-nested-callbacks": ["error", 3],
-    "max-params": ["error", 4],
+    "max-nested-callbacks": [
+      "error",
+      3
+    ],
+    "max-params": [
+      "error",
+      4
+    ],
     "new-cap": "off",
-    "newline-after-var": ["error", "always"],
+    "newline-after-var": [
+      "error",
+      "always"
+    ],
     "newline-before-return": "error",
     "newline-per-chained-call": [
       "error",
@@ -106,17 +141,19 @@
         "ignoreChainWithDepth": 4
       }
     ],
-    "no-alert": "error",
+    "no-alert": "warn",
     "no-array-constructor": "error",
     "no-class-assign": "error",
-    "no-console": "error",
+    "no-console": "warn",
     "no-continue": "error",
     "no-duplicate-imports": "error",
     "no-eval": "error",
     "no-extend-native": [
       "error",
       {
-        "exceptions": ["Object"]
+        "exceptions": [
+          "Object"
+        ]
       }
     ],
     "no-extra-bind": "error",
@@ -124,6 +161,7 @@
     "no-lonely-if": "error",
     "no-multi-spaces": "error",
     "no-multi-str": "error",
+    "no-multi-assign": 0,
     "no-multiple-empty-lines": [
       "error",
       {
@@ -144,6 +182,12 @@
     "no-throw-literal": "error",
     "no-trailing-spaces": "error",
     "no-undef-init": "error",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_.*$"
+      }
+    ],
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "error",
     "no-use-before-define": "error",
@@ -159,11 +203,16 @@
     "no-warning-comments": [
       1,
       {
-        "terms": ["fixme"]
+        "terms": [
+          "fixme"
+        ]
       }
     ],
     "no-whitespace-before-property": "error",
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "prefer-const": "error",
     "prefer-promise-reject-errors": [
       "error",
@@ -177,18 +226,34 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js", ".jsx"]
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
       }
     ],
-    "semi": ["error", "never"],
-    "space-in-parens": ["error", "never"],
-    "spaced-comment": ["error", "always"],
-    "wrap-iife": ["error", "any"],
+    "semi": [
+      "error",
+      "never"
+    ],
+    "space-in-parens": [
+      "error",
+      "never"
+    ],
+    "spaced-comment": [
+      "error",
+      "always"
+    ],
+    "wrap-iife": [
+      "error",
+      "any"
+    ],
     "import/no-cycle": 0,
     "react/no-unescaped-entities": 0
   },
   "env": {
-    "jest": true
+    "jest": true,
+    "browser": true
   },
   "globals": {
     "window": true,
