--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "grommet": "^2.8.0",
+    "grommet": "^2.8.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@testing-library/react": "^9.3.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-macros": "^2.6.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
