--- a/.eslintrc
+++ b/.eslintrc
@@ -1,268 +1,5 @@
 {
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
-  "parser": "babel-eslint",
-  "plugins": [
-    "react"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true,
-    }
-  },
-  "rules": {
-    "array-bracket-spacing": [
-      "error",
-      "never"
-    ],
-    "block-scoped-var": "error",
-    "block-spacing": "error",
-    "brace-style": [
-      "error",
-      "1tbs",
-      {
-        "allowSingleLine": true
-      }
-    ],
-    "camelcase": "error",
-    "comma-dangle": 0,
-    "comma-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "comma-style": [
-      "error",
-      "last"
-    ],
-    "complexity": [
-      "error",
-      {
-        "max": 25
-      }
-    ],
-    "default-case": "error",
-    "dot-notation": "error",
-    "eol-last": [
-      "error",
-      "always"
-    ],
-    "eqeqeq": [
-      "error",
-      "always"
-    ],
-    "func-call-spacing": [
-      "error",
-      "never"
-    ],
-    "func-name-matching": "error",
-    "func-style": [
-      "error",
-      "declaration",
-      {
-        "allowArrowFunctions": true
-      }
-    ],
-    "import/prefer-default-export": "off",
-    "indent": [
-      "error",
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "jsx-quotes": [
-      "error",
-      "prefer-double"
-    ],
-    "key-spacing": [
-      2,
-      {
-        "singleLine": {
-          "beforeColon": false,
-          "afterColon": true
-        },
-        "multiLine": {
-          "beforeColon": false,
-          "afterColon": true
-        }
-      }
-    ],
-    "keyword-spacing": [
-      "error",
-      {
-        "after": true,
-        "before": true
-      }
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "max-depth": [
-      "error",
-      3
-    ],
-    "max-len": [
-      "error",
-      120,
-      {
-        "ignoreComments": true,
-        "ignoreUrls": true,
-        "ignoreStrings": true,
-        "ignoreTemplateLiterals": true,
-        "ignoreRegExpLiterals": true
-      }
-    ],
-    "max-nested-callbacks": [
-      "error",
-      3
-    ],
-    "max-params": [
-      "error",
-      4
-    ],
-    "new-cap": "off",
-    "newline-after-var": [
-      "error",
-      "always"
-    ],
-    "newline-before-return": "error",
-    "newline-per-chained-call": [
-      "error",
-      {
-        "ignoreChainWithDepth": 4
-      }
-    ],
-    "no-alert": "warn",
-    "no-array-constructor": "error",
-    "no-class-assign": "error",
-    "no-console": "warn",
-    "no-continue": "error",
-    "no-duplicate-imports": "error",
-    "no-eval": "error",
-    "no-extend-native": [
-      "error",
-      {
-        "exceptions": [
-          "Object"
-        ]
-      }
-    ],
-    "no-extra-bind": "error",
-    "no-floating-decimal": "error",
-    "no-lonely-if": "error",
-    "no-multi-spaces": "error",
-    "no-multi-str": "error",
-    "no-multi-assign": 0,
-    "no-multiple-empty-lines": [
-      "error",
-      {
-        "max": 1,
-        "maxEOF": 1
-      }
-    ],
-    "no-nested-ternary": "error",
-    "no-new-func": "error",
-    "no-new-object": "error",
-    "no-new-wrappers": "error",
-    "no-new": "warn",
-    "no-param-reassign": "error",
-    "no-proto": "error",
-    "no-return-assign": "error",
-    "no-self-compare": "error",
-    "no-template-curly-in-string": "error",
-    "no-throw-literal": "error",
-    "no-trailing-spaces": "error",
-    "no-undef-init": "error",
-    "no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "^_.*$"
-      }
-    ],
-    "no-unneeded-ternary": "error",
-    "no-unused-expressions": "error",
-    "no-use-before-define": "error",
-    "no-useless-constructor": "error",
-    "no-useless-rename": [
-      "error",
-      {
-        "ignoreImport": true
-      }
-    ],
-    "no-var": "error",
-    "no-void": "error",
-    "no-warning-comments": [
-      1,
-      {
-        "terms": [
-          "fixme"
-        ]
-      }
-    ],
-    "no-whitespace-before-property": "error",
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
-    "prefer-const": "error",
-    "prefer-promise-reject-errors": [
-      "error",
-      {
-        "allowEmptyReject": true
-      }
-    ],
-    "prefer-spread": "error",
-    "prefer-template": "error",
-    "quotes": 0,
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
-      }
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
-    "space-in-parens": [
-      "error",
-      "never"
-    ],
-    "spaced-comment": [
-      "error",
-      "always"
-    ],
-    "wrap-iife": [
-      "error",
-      "any"
-    ],
-    "import/no-cycle": 0,
-    "react/no-unescaped-entities": 0
-  },
-  "env": {
-    "jest": true,
-    "browser": true
-  },
-  "globals": {
-    "window": true,
-    "document": true,
-    "localStorage": true,
-    "FormData": true,
-    "FileReader": true,
-    "Blob": true,
-    "navigator": true,
-    "fetch": true
-  }
+    "@sparkgeo/eslint-config-react"
+  ]
 }
