--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@sparkgeo/eslint-config-react": "^0.4.0",
     "@testing-library/react": "^9.3.2",
     "babel-eslint": "^10.0.3",
     "babel-plugin-macros": "^2.6.1",
