--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "grommet": "^2.8.1",
+    "grommet": "^2.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
+    "@babel/core": "^7.7.7",
     "@sparkgeo/eslint-config-react": "^0.4.0",
     "@testing-library/react": "^9.3.2",
     "babel-eslint": "^10.0.3",
     "babel-plugin-macros": "^2.6.1",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^2.3.0",
-    "lint-staged": "^8.1.7",
+    "husky": "^2.7.0",
+    "lint-staged": "^8.2.1",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react-test-renderer": "^16.8.6"
