--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^2.7.0",
     "lint-staged": "^8.2.1",
+    "plop": "^2.5.4",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   },
@@ -34,7 +36,8 @@
     "eject": "react-scripts eject",
     "test": "react-scripts test",
     "lint": "eslint './src/**/*.js'",
-    "lint:fix": "eslint './src/**/*.js' --fix"
+    "lint:fix": "eslint './src/**/*.js' --fix",
+    "plop": "plop"
   },
   "browserslist": {
     "production": [
