--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "sample-react-app",
+  "name": "starter-react-grommet",
   "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "grommet": "^2.10.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.0",
-    "styled-components": "^4.4.1"
+    "grommet": "^2.14.0",
+    "grommet-icons": "^4.4.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@sparkgeo/eslint-config-react": "^0.4.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-macros": "^2.8.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-flowtype": "^4.6.0",
@@ -24,10 +25,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^2.7.0",
-    "lint-staged": "^8.2.1",
-    "plop": "^2.5.4",
-    "prettier": "^1.19.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "plop": "^2.7.1",
+    "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
   },
   "scripts": {
